--- a/style.css
+++ b/style.css
@@ -22,6 +22,12 @@
 	initial-value: #2058ff;
 }
 
+@property --disabled-color {
+	syntax: "<color>";
+	inherits: false;
+	initial-value: #ccc;
+}
+
 body {
 	background-color: var(--primary-bg-color);
 	color: var(--primary-fg-color);
@@ -144,7 +150,36 @@ button:hover {
 }
 
 #settingsHeader {
-	font-size: 4em;
+	font-size: 3.2em;
+}
+
+#settingsFooter {
+	width: 100%;
+	display: flex;
+	justify-content: flex-end;
+	margin-top: 2vh;
+}
+
+.settingsFooterButton {
+	color: var(--primary-bg-color);
+	font-size: 1.2em;
+}
+
+.settingsFooterButton:hover  {
+	color: var(--secondary-link-color);
+}
+
+#settingsSaveButton {
+	margin-right: 1em;
+}
+
+.disabled {
+	color: var(--disabled-color);
+}
+
+.disabled:hover {
+	color: var(--disabled-color);
+	cursor: default;
 }
 
 #settingsList {
@@ -174,22 +209,13 @@ button:hover {
 }
 
 .settingOptionLabel {
-	font-size: 1.2em;
+	font-size: 1.4em;
 	padding-right: 12px;
 }
 
 select {
 	height: 2em;
 	width: 12em;
-}
-
-#settingsCloseButton {
-	color: #6f93ff;
-	font-size: 1.2em;
-}
-
-#settingsCloseButton:hover  {
-	color: var(--secondary-link-color);
 }
 
 #controlsContainer {
@@ -244,7 +270,7 @@ select {
 	left: 0;
 	right: 0;
 	bottom: 0;
-	background-color: #ccc;
+	background-color: var(--disabled-color);
 	-webkit-transition: .4s;
 	transition: .4s;
 	border-radius: 34px;
